Fix zoom on mobile

--- a/lil-bits/src/app/globals.css
+++ b/lil-bits/src/app/globals.css
@@ -105,6 +105,7 @@ some parts of it requires it to be in globals.css */
 
 .date_picker {
   border-radius: 1rem;
+  font-size: 16px;
   text-align: center;
   border: 2px solid #a86e5f;
   width: 50%;
